# habits-tracker

./: .gitignore  .python-version  README.md  app.py  app_mac.py  crontab  dockerfile  habits_log.json  morning_routine.py  morning_warning.py  pyproject.toml  start.sh
habits_tracker/: config.py  email_service.py  form_processor.py  penalty_checker.py  utils.py
habits_tracker/models/: habits_model.py  logs_model.py  user_model.py
habits_tracker/views/: authenticator.py  habit_manager.py  log_habit_form.py  log_manager.py  logs_test.py
pages/: 2_Manage_Cron_Jobs.py  3_Habits_Logs.py
