[tool.poetry]
name = "habits-tracker"
version = "0.1.0"
description = "An app to reinforce good habits"
authors = ["Vincent Naayem <vincentnaayem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
schedule = "^1.2.2"
logger = "^1.4"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
