[tool.poetry]
name = "habits-tracker"
version = "0.1.0"
description = "An app to reinforce good habits"
authors = ["Vincent Naayem <vincentnaayem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
logger = "^1.4"
pyyaml = "^6.0.1"
supabase = "^2.5.1"
pandas = "^2.2.2"
numpy = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
